--- a/core/cloudflared-tunnel/config.yaml
+++ b/core/cloudflared-tunnel/config.yaml
@@ -47,26 +47,15 @@ ingress:
   # MEDIA
   - hostname: bazarr.pmcd.io
     service: http://bazarr.media:6767
-  - hostname: radarr.pmcd.io
-    service: http://radarr.media:80
-  - hostname: sabnzbd.pmcd.io
-    service: http://sabnzbd.media:80
-  - hostname: sonarr.pmcd.io
-    service: http://sonarr.media:80
-  - hostname: beets.pmcd.io
-    service: http://beets.media:8337
   - hostname: overseerr.pmcd.io
     service: http://overseerr.media:5055
   - hostname: request.pmcd.dev
     service: http://overseerr.media:5055
-  - hostname: prowlarr.pmcd.io
-    service: http://prowlarr.media:80
   - hostname: youtubedl.pmcd.io
     service: http://youtubedl-youtubedl-material.media:17442
-  - hostname: lidarr.pmcd.io
-    service: http://lidarr.media:80
-  - hostname: readarr.pmcd.io
-    service: http://readarr.media:80
+  - hostname: tronbyt.pmcd.io
+    service: http://tronbyt:8000
+
 
   - hostname: studio-sb-staging.pmcd.dev
     service: http://cd-staging-supabase-studio:3000
