--- a/apps/minio/chart/Chart.yaml
+++ b/apps/minio/chart/Chart.yaml
@@ -8,4 +8,4 @@ appVersion: "1.0.0"
 dependencies:
   - name: minio
     version: 17.0.21
-    repository: oci://registry-1.docker.io/bitnamicharts/minio
+    repository: oci://registry-1.docker.io/bitnamicharts
