--- a/apps/media/agregarr/deployment.yaml
+++ b/apps/media/agregarr/deployment.yaml
@@ -2,30 +2,30 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app.kubernetes.io/instance: aggregarr
-    app.kubernetes.io/name: aggregarr
-  name: aggregarr
+    app.kubernetes.io/instance: agregarr
+    app.kubernetes.io/name: agregarr
+  name: agregarr
   namespace: media
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/instance: aggregarr
-      app.kubernetes.io/name: aggregarr
+      app.kubernetes.io/instance: agregarr
+      app.kubernetes.io/name: agregarr
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app.kubernetes.io/instance: aggregarr
-        app.kubernetes.io/name: aggregarr
+        app.kubernetes.io/instance: agregarr
+        app.kubernetes.io/name: agregarr
     spec:
       containers:
-        - name: aggregarr
+        - name: agregarr
           env:
             - name: TZ
               value: America/Chicago
 
-          image: aggregarr
+          image: agregarr
           imagePullPolicy: IfNotPresent
 
           ports:
