--- a/apps/media/agregarr/service.yaml
+++ b/apps/media/agregarr/service.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app.kubernetes.io/instance: lidarr
-    app.kubernetes.io/name: lidarr
-  name: lidarr
+    app.kubernetes.io/instance: agregarr
+    app.kubernetes.io/name: agregarr
+  name: agregarr
   namespace: media
 spec:
   ports:
@@ -13,6 +13,6 @@ spec:
       protocol: TCP
       targetPort: http
   selector:
-    app.kubernetes.io/instance: lidarr
-    app.kubernetes.io/name: lidarr
+    app.kubernetes.io/instance: agregarr
+    app.kubernetes.io/name: agregarr
   type: ClusterIP
