--- a/apps/media/agregarr/storage.yaml
+++ b/apps/media/agregarr/storage.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: smb-appconfig-agregarr
-  namespace: default
+  namespace: media
 spec:
   storageClassName: ""
   capacity:
@@ -18,7 +18,7 @@ spec:
   csi:
     driver: smb.csi.k8s.io
     readOnly: false
-    volumeHandle: default-smb-agregarr-volume-id
+    volumeHandle: media-smb-agregarr-volume-id
     volumeAttributes:
       source: '//192.168.1.253/AppConfig/agregarr'
     nodeStageSecretRef:
@@ -29,7 +29,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: smb-appconfig-agregarr-claim
-  namespace: default
+  namespace: media
 spec:
   accessModes:
     - ReadWriteMany
