--- a/apps/media/sonarr/deployment.yaml
+++ b/apps/media/sonarr/deployment.yaml
@@ -77,7 +77,7 @@ spec:
               name: config
               readOnly: true
               subPath: config.xml
-            - mountPath: /media
+            - mountPath: /mnt/media
               name: media
 
       restartPolicy: Always
