--- a/apps/media/sabnzbd/deployment.yaml
+++ b/apps/media/sabnzbd/deployment.yaml
@@ -88,7 +88,7 @@ spec:
             - mountPath: /config
               name: config-empty
               readOnly: false
-            - mountPath: /media
+            - mountPath: /mnt/media
               name: media
 
       restartPolicy: Always
