--- a/apps/media/agregarr/kustomization.yaml
+++ b/apps/media/agregarr/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - service.yaml
-  - ingress.yaml
+  - ingressroute.yaml
 
 images:
   - name: agregarr
