--- a/apps/media/agregarr/ingressroute.yaml
+++ b/apps/media/agregarr/ingressroute.yaml
@@ -7,7 +7,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: PathPrefix(`/agregarr`)
+    - match: Host(`agregar.x.pmcd.io`)
       kind: Rule
       services:
         - name: agregarr
