feat: dns resolver

--- a/core/cloudflared-tunnel/external-secret.yaml
+++ b/core/cloudflared-tunnel/external-secret.yaml
@@ -16,3 +16,22 @@ spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: secretstore
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: cloudflare-pmcdio-credentials
+  namespace: default
+spec:
+  target:
+    template:
+      metadata:
+        labels: {}
+  dataFrom:
+    - extract:
+        key: cloudflare-pmcdio
+
+  refreshInterval: 24h
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: secretstore
