--- a/core/traefik.yaml
+++ b/core/traefik.yaml
@@ -21,6 +21,36 @@ spec:
     helm:
       releaseName: traefik
       valuesObject:
+        entryPoints:
+          web:
+            address: ":80"
+          websecure:
+            address: ":443"
+        certificatesResolvers:
+          pmcdio:
+            acme:
+              email: "patrickjmcd@gmail.com"
+              storage: "/data/acme.json"       # Path to store the certificate information.
+              dnsChallenge:
+                provider: cloudflare
+                delayBeforeCheck: 0
+        env:
+          - name: CF_DNS_API_TOKEN
+            valueFrom:
+              secretKeyRef:
+                name: cloudflare-pmcdio-credentials
+                key: CLOUDFLARE_TOKEN
+        deployment:
+          initContainers:
+            - name: volume-permissions
+              image: busybox:latest
+              command: [ "sh", "-c", "touch /data/acme.json; chmod -v 600 /data/acme.json" ]
+              volumeMounts:
+                - mountPath: /data
+                  name: data
+        podSecurityContext:
+          fsGroup: 65532
+          fsGroupChangePolicy: "OnRootMismatch"
         ingressRoute:
           dashboard:
             enabled: true
