--- a/apps/media/agregarr/ingressroute.yaml
+++ b/apps/media/agregarr/ingressroute.yaml
@@ -5,7 +5,7 @@ metadata:
   name: agregarr
 spec:
   entryPoints:
-    - web
+    - websecure
   routes:
     - match: Host(`agregar.x.pmcd.io`)
       kind: Rule
