--- a/core/traefik.yaml
+++ b/core/traefik.yaml
@@ -40,14 +40,18 @@ spec:
               secretKeyRef:
                 name: cloudflare-pmcdio-credentials
                 key: CLOUDFLARE_TOKEN
-        deployment:
-          initContainers:
-            - name: volume-permissions
-              image: busybox:latest
-              command: [ "sh", "-c", "touch /data/acme.json; chmod -v 600 /data/acme.json" ]
-              volumeMounts:
-                - mountPath: /data
-                  name: data
+#        deployment:
+#          initContainers:
+#            - name: volume-permissions
+#              image: busybox:latest
+#              command: [ "sh", "-c", "touch /data/acme.json; chmod -v 600 /data/acme.json" ]
+#              volumeMounts:
+#                - mountPath: /data
+#                  name: data
+#        podSecurityContext:
+#          fsGroup: 65532
+#          runAsRoot: true
+#          fsGroupChangePolicy: "OnRootMismatch"
         ingressRoute:
           dashboard:
             enabled: true
