--- a/core/traefik.yaml
+++ b/core/traefik.yaml
@@ -40,20 +40,20 @@ spec:
               secretKeyRef:
                 name: cloudflare-pmcdio-credentials
                 key: CLOUDFLARE_TOKEN
-        deployment:
-          initContainers:
-            - name: volume-permissions
-              image: busybox:latest
-              command: [ "sh", "-c", "touch /data/acme.json; chmod -v 600 /data/acme.json" ]
-              volumeMounts:
-                - mountPath: /data
-                  name: data
-        podSecurityContext:
-          fsGroup: 65532
-          runAsGroup: 65532
-          runAsNonRoot: true
-          runAsUser: 65532
-          fsGroupChangePolicy: "OnRootMismatch"
+#        deployment:
+#          initContainers:
+#            - name: volume-permissions
+#              image: busybox:latest
+#              command: [ "sh", "-c", "touch /data/acme.json; chmod -v 600 /data/acme.json" ]
+#              volumeMounts:
+#                - mountPath: /data
+#                  name: data
+#        podSecurityContext:
+#          fsGroup: 65532
+#          runAsGroup: 65532
+#          runAsNonRoot: true
+#          runAsUser: 65532
+#          fsGroupChangePolicy: "OnRootMismatch"
         ingressRoute:
           dashboard:
             enabled: true
@@ -70,6 +70,6 @@ spec:
               namespacePolicy:
                 from: All
 
-        persistence:
-          enabled: true
-          existingClaim: smb-appconfig-traefik-claim
+#        persistence:
+#          enabled: true
+#          existingClaim: smb-appconfig-traefik-claim
