feat: tls, hopefully

--- a/core/traefik.yaml
+++ b/core/traefik.yaml
@@ -61,6 +61,8 @@ spec:
             entryPoints:
               - web
               - websecure
+            tls:
+              certResolver: pmcdio
         providers:
           kubernetesGateway:
             enabled: true
