--- a/apps/media/sonarr/ingressroute.yaml
+++ b/apps/media/sonarr/ingressroute.yaml
@@ -1,15 +1,15 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: agregarr
+  name: sonarr
 spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`agregarr.x.pmcd.io`)
+    - match: Host(`sonarr.x.pmcd.io`)
       kind: Rule
       services:
-        - name: agregarr
+        - name: sonarr
           port: 80
   tls:
     certResolver: pmcdio
