feat: redirect http to https

--- a/core/traefik.yaml
+++ b/core/traefik.yaml
@@ -24,6 +24,12 @@ spec:
         entryPoints:
           web:
             address: ":80"
+            http:
+              redirections:
+                entryPoint:
+                  to: websecure
+                  scheme: https
+                  permanent: true
           websecure:
             address: ":443"
         certificatesResolvers:
