fix: traefik redirect

--- a/apps/media/sabnzbd/sabnzbd.template.ini
+++ b/apps/media/sabnzbd/sabnzbd.template.ini
@@ -169,7 +169,7 @@ max_foldername_length = 246
 nomedia_marker = ""
 ipv6_servers = 1
 url_base = /sabnzbd
-host_whitelist = sabnzbd.${SECRET_DOMAIN}, sabnzbd
+host_whitelist = sabnzbd.${SECRET_DOMAIN}, sabnzbd, sabnzbd.x.${SECRET_DOMAIN}
 max_url_retries = 10
 downloader_sleep_time = 10
 ssdp_broadcast_interval = 15
