--- a/argo/projects/core.yaml
+++ b/argo/projects/core.yaml
@@ -14,6 +14,7 @@ spec:
     - https://charts.external-secrets.io
     - https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
     - https://traefik.github.io/charts
+    - oci://ghcr.io/kubewall/charts/kubewall
   destinations:
     - namespace: "*"
       name: in-cluster
