--- a/core/kubewall-assets/ingressroute.yaml
+++ b/core/kubewall-assets/ingressroute.yaml
@@ -2,6 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: kubewall
+  namespace: kubewall
 spec:
   entryPoints:
     - websecure
