--- a/core/cloudflared-tunnel/config.yaml
+++ b/core/cloudflared-tunnel/config.yaml
@@ -84,6 +84,12 @@ ingress:
     originRequest:
       noTLSVerify: true
 
+
+  - hostname: kubewall.pmcd.io
+    service: https://kubewall.kubewall:8443
+    originRequest:
+      noTLSVerify: true
+
   # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
   # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
   # in the connection from cloudflared to your local service, not from the internet to cloudflared.
