--- a/apps/tronbyt-server/storage.yaml
+++ b/apps/tronbyt-server/storage.yaml
@@ -1,40 +1,11 @@
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: smb-appconfig-tronbyt-server
-  namespace: default
-spec:
-  storageClassName: ""
-  capacity:
-    storage: 200Mi
-  accessModes:
-    - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  mountOptions:
-    - dir_mode=0777
-    - file_mode=0777
-    - vers=3.0
-  csi:
-    driver: smb.csi.k8s.io
-    readOnly: false
-    volumeHandle: default-smb-tronbyt-server-volume-id
-    volumeAttributes:
-      source: '//192.168.1.253/AppConfig/tronbyt-server'
-    nodeStageSecretRef:
-      name: smb-creds
-      namespace: csi-smb-provisioner
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: smb-appconfig-tronbyt-server-claim
-  namespace: default
+  name: longhorn-tronbyt-server-config
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
+  storageClassName: longhorn
   resources:
     requests:
-      storage: 200Mi
-  volumeName: smb-appconfig-tronbyt-server
-  storageClassName: ""
+      storage: 20Mi
