--- a/apps/tronbyt-server/kustomization.yaml
+++ b/apps/tronbyt-server/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - deployment.yaml
+- ingressroute.yaml
 - service.yaml
 - storage.yaml
 
