--- a/apps/tronbyt-server/ingressroute.yaml
+++ b/apps/tronbyt-server/ingressroute.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: tronbyt-server
-  namespace: main
+  namespace: default
 spec:
   entryPoints:
     - websecure
