--- a/apps/ia-ignition/deployment.yaml
+++ b/apps/ia-ignition/deployment.yaml
@@ -24,9 +24,6 @@ spec:
         - name: ia-ignition
           image: ia-ignition
           imagePullPolicy: IfNotPresent
-          envFrom:
-            - configMapRef:
-                name: ia-ignition-config
           ports:
             - containerPort: 8088
               name: http
@@ -45,14 +42,14 @@ spec:
             periodSeconds: 90
             timeoutSeconds: 10
             failureThreshold: 3
-          volumeMounts:
-            - mountPath: /app/users
-              name: appconfig
-              subPath: users
-            - mountPath: /app/data
-              name: appconfig
-              subPath: data
-      volumes:
-        - name: appconfig
-          persistentVolumeClaim:
-            claimName: longhorn-ia-ignition-config
+#          volumeMounts:
+#            - mountPath: /app/users
+#              name: appconfig
+#              subPath: users
+#            - mountPath: /app/data
+#              name: appconfig
+#              subPath: data
+#      volumes:
+#        - name: appconfig
+#          persistentVolumeClaim:
+#            claimName: longhorn-ia-ignition-config
