--- a/apps/ia-ignition/ingressroute.yaml
+++ b/apps/ia-ignition/ingressroute.yaml
@@ -8,7 +8,7 @@ spec:
     - websecure
     - web
   routes:
-    - match: Host(`ignition.x.pmcd.io`)
+    - match: Host(`ia-ignition.x.pmcd.io`)
       kind: Rule
       services:
         - name: ia-ignition
