--- a/apps/media/sabnzbd/sabnzbd.template.ini
+++ b/apps/media/sabnzbd/sabnzbd.template.ini
@@ -8,7 +8,7 @@ bandwidth_perc = 100
 refresh_rate = 1
 interface_settings = ""
 queue_limit = 20
-config_lock = 1
+config_lock = 0
 sched_converted = 0
 notified_new_skin = 2
 direct_unpack_tested = 1
@@ -34,9 +34,9 @@ local_ranges = ,
 api_key = ${SABNZBD_API_KEY}
 nzb_key = ${SABNZBD_NZB_KEY}
 permissions = ""
-download_dir = /mnt/media/downloads/incomplete
+download_dir = /mnt/incomplete
 download_free = ""
-complete_dir = /mnt/media/downloads/complete
+complete_dir = /mnt/complete
 complete_free = ""
 fulldisk_autoresume = 0
 script_dir = ""
