--- a/core/csi-driver-nfs-assets/storageclass.yaml
+++ b/core/csi-driver-nfs-assets/storageclass.yaml
@@ -6,7 +6,7 @@ metadata:
 provisioner: nfs.csi.k8s.io
 parameters:
   server: 192.168.1.253
-  share: /var/nfs/KubePVC
+  share: /var/nfs/shared/KubePVC
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 mountOptions:
