--- a/apps/media/sabnzbd/complete.storage.yaml
+++ b/apps/media/sabnzbd/complete.storage.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: sab-complete-pv
-  namespace: media
 spec:
   capacity:
     storage: 500Gi           # logical size; NFS itself enforces real size
@@ -20,3 +19,17 @@ spec:
     volumeAttributes:
       server: 192.168.1.253               # NFS server IP/hostname
       share: /var/nfs/shared/Media/downloads/complete
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: sab-complete-pvc
+  namespace: media
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 500Gi
+  storageClassName: ""       # IMPORTANT: empty string to bind to static PV
+  volumeName: sab-complete-pv  # bind to the specific static PV
