--- a/apps/media/sabnzbd/sabnzbd.template.ini
+++ b/apps/media/sabnzbd/sabnzbd.template.ini
@@ -36,7 +36,7 @@ nzb_key = ${SABNZBD_NZB_KEY}
 permissions = ""
 download_dir = /mnt/incomplete
 download_free = ""
-complete_dir = /mnt/complete
+complete_dir = /mnt/media/downloads/complete
 complete_free = ""
 fulldisk_autoresume = 0
 script_dir = ""
