feat: add sab download pvc

--- a/apps/media/bazarr/deployment.yaml
+++ b/apps/media/bazarr/deployment.yaml
@@ -95,6 +95,8 @@ spec:
               name: config-empty
             - mountPath: /media
               name: media
+            - mountPath: /downloads
+              name: downloads
 
       restartPolicy: Always
       volumes:
@@ -109,3 +111,6 @@ spec:
         - name: media
           persistentVolumeClaim:
             claimName: smb-media-claim
+        - name: downloads
+          persistentVolumeClaim:
+            claimName: sab-downloads-pvc
