--- a/apps/media/lidarr/deployment.yaml
+++ b/apps/media/lidarr/deployment.yaml
@@ -92,6 +92,8 @@ spec:
               readOnly: false
             - mountPath: /mnt/media
               name: media
+            - mountPath: /mnt/downloads
+              name: downloads
 
       restartPolicy: Always
       volumes:
@@ -106,3 +108,6 @@ spec:
         - name: media
           persistentVolumeClaim:
             claimName: smb-media-claim
+        - name: downloads
+          persistentVolumeClaim:
+            claimName: sab-downloads-pvc
