--- a/apps/media/radarr/deployment.yaml
+++ b/apps/media/radarr/deployment.yaml
@@ -79,6 +79,8 @@ spec:
               subPath: config.xml
             - mountPath: /mnt/media
               name: media
+            - mountPath: /mnt/downloads
+              name: downloads
 
       restartPolicy: Always
       volumes:
@@ -91,3 +93,6 @@ spec:
         - name: media
           persistentVolumeClaim:
             claimName: smb-media-claim
+        - name: downloads
+          persistentVolumeClaim:
+            claimName: sab-downloads-claim
