feat: add NVMe storage support for SABnzbd

--- a/apps/media/sabnzbd/deployment.yaml
+++ b/apps/media/sabnzbd/deployment.yaml
@@ -105,7 +105,16 @@ spec:
           emptyDir: {}
         - name: incomplete-storage
           persistentVolumeClaim:
-            claimName: sab-incomplete-pvc
+            claimName: rpi51-nvme-pvc
         - name: media
           persistentVolumeClaim:
             claimName: smb-media-claim
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: nvme-storage-available
+            operator: In
+            values:
+            - "true"
