--- a/apps/media/sabnzbd/deployment.yaml
+++ b/apps/media/sabnzbd/deployment.yaml
@@ -92,6 +92,7 @@ spec:
               name: media
             - mountPath: /mnt/incomplete
               name: incomplete-storage
+              subPath: sabnzbd/incomplete
 
       restartPolicy: Always
       volumes:
