refactor: update node affinity to tolerations for SABnzbd deployment

--- a/apps/media/sabnzbd/deployment.yaml
+++ b/apps/media/sabnzbd/deployment.yaml
@@ -110,12 +110,8 @@ spec:
         - name: media
           persistentVolumeClaim:
             claimName: smb-media-claim
-  affinity:
-    nodeAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: nvme-storage-available
-            operator: In
-            values:
-            - "true"
+      tolerations:
+        - key: nvme-storage-available
+          operator: Equal
+          value: "true"
+          effect: NoSchedule
