fix: longhorn for agregarr storage

--- a/apps/media/agregarr/deployment.yaml
+++ b/apps/media/agregarr/deployment.yaml
@@ -69,10 +69,15 @@ spec:
           volumeMounts:
             - mountPath: /media
               name: media
+            - mountPath: /app/config
+              name: config
 
       restartPolicy: Always
       volumes:
         - name: media
           persistentVolumeClaim:
             claimName: smb-media-claim
+        - name: config
+          persistentVolumeClaim:
+            claimName: longhorn-agregarr-config
 
