--- a/core/csi-driver-nfs-assets/kustomization.yaml
+++ b/core/csi-driver-nfs-assets/kustomization.yaml
@@ -1,4 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - storageclass.yaml
+  - kubepvc.storageclass.yaml
+  - hot.storageclass.yaml
