fix: use nfs hot storage

--- a/apps/media/sabnzbd/incomplete.storage.yaml
+++ b/apps/media/sabnzbd/incomplete.storage.yaml
@@ -8,5 +8,5 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: 100Gi
-  storageClassName: nfs-csi
+      storage: 2Ti
+  storageClassName: nfs-csi-hot
