--- a/apps/media/kometa/cronjob.yaml
+++ b/apps/media/kometa/cronjob.yaml
@@ -32,5 +32,8 @@ spec:
                 claimName: longhorn-kometa-config
             - configMap:
                 name: kometa-config
+                items:
+                  - key: config.yaml
+                    path: config.yaml
               name: kometa-config
           restartPolicy: OnFailure
