chore: .yml instead of .yaml

--- a/apps/media/kometa/cronjob.yaml
+++ b/apps/media/kometa/cronjob.yaml
@@ -26,6 +26,7 @@ spec:
                   mountPath: /config
                 - name: kometa-config
                   mountPath: /config/config.yml
+                  subPath: config.yml
           volumes:
             - name: config
               persistentVolumeClaim:
