--- a/core/prometheus-assets/ingressroute.yaml
+++ b/core/prometheus-assets/ingressroute.yaml
@@ -2,6 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: prometheus-server
+  namespace: prometheus
 spec:
   entryPoints:
     - websecure
