--- a/apps/media/base/nvme.storage.yaml
+++ b/apps/media/base/nvme.storage.yaml
@@ -20,6 +20,7 @@ spec:
               operator: In
               values:
                 - pi-worker-1
+                - pi-worker-3
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
