feat: storage for prometheus

--- a/core/prometheus.yaml
+++ b/core/prometheus.yaml
@@ -20,3 +20,7 @@ spec:
     repoURL: https://prometheus-community.github.io/helm-charts
     helm:
       releaseName: prometheus
+      values: |
+        server:
+          persistentVolume:
+            existingClaim: longhorn-prometheus-data
