--- a/core/prometheus.yaml
+++ b/core/prometheus.yaml
@@ -20,3 +20,6 @@ spec:
     repoURL: https://prometheus-community.github.io/helm-charts
     helm:
       releaseName: prometheus
+      values: |
+        server:
+          retentionSize: 7500MB
