--- a/core/cloudflared-tunnel/config.yaml
+++ b/core/cloudflared-tunnel/config.yaml
@@ -90,6 +90,9 @@ ingress:
     originRequest:
       noTLSVerify: true
 
+  - hostname: mealie.pmcd.dev
+    service: http://mealie:9000
+
   # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
   # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
   # in the connection from cloudflared to your local service, not from the internet to cloudflared.
