--- a/apps/mealie/.env.template
+++ b/apps/mealie/.env.template
@@ -1,8 +1,10 @@
 ALLOW_SIGNUP=false
 TZ=America/Chicago
 DB_ENGINE=postgres
-BASE_URL=https://mealie.${SECRET_DOMAIN}
+BASE_URL=https://mealie.pmcd.dev
 POSTGRES_USER=mealie
 POSTGRES_PASSWORD=${MEALIE_DB_PASSWORD}
 POSTGRES_DB=mealie
 POSTGRES_SERVER=${POSTGRES_ADDRESS}
+OPENAI_API_KEY=${OPENAI_API_KEY}
+
