--- a/apps/media/tautulli/kustomization.yaml
+++ b/apps/media/tautulli/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
 
 images:
   - name: tautulli
-    newName: tautulli/tautulli
-    newTag: 2.0.0
+    newName: ghcr.io/tautulli/tautulli
+    newTag: v2.16.0
